Actualizar versión del plugin a 2.2.1 y mejorar la gestión de configuración y envío de mensajes